samples/_failures_safe/1761130318_ac5077_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_017edb5d.c: In function ‘rotation_matrix_z’:
./samples/SAFE/__tmp_017edb5d.c:115:5: error: expected declaration or statement at end of input
  115 |     result.elements[1][0] = s;   result.elements[1][1] = c;   result.elements[1][2] = 0.0;
      |     ^~~~~~
